# cli-task-manager-python

./: .gitignore  README.md  database.py  model.py  todocli.py
dev/: prepare.bash  pyproject.toml
